k8s/7tv/7tv-nodeapi.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: 7tv-nodeapi
  namespace: 7tv
  labels:
    app: 7tv-nodeapi
spec:
  serviceName: seventv-nodeapi-svc
  selector:
    matchLabels:
      app: 7tv-nodeapi
  template:
    metadata:
      labels:
        app: 7tv-nodeapi
    spec:
      terminationGracePeriodSeconds: 1
      imagePullSecrets:
        - name: regcred
      containers:
        - name: 7tv-nodeapi
          image: ghcr.io/seventv/server:latest
          imagePullPolicy: Always

          resources:
            requests:
              memory: "85M"
              cpu: "200m"
            limits:
              memory: "1G"
              cpu: "1000m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: seventv-nodeapi-svc
spec:
  selector:
    app: 7tv-nodeapi
  ports:
    - port: 80
      name: http
      targetPort: 3000
    - port: 443
      name: https
      targetPort: 3000
