k8s/7tv/7tv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 7tv-ingress
  namespace: 7tv
spec:
  rules:
    - host: api.7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-nodeapi-svc
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: seventv-goapi-svc
                port:
                  number: 80

    - host: 7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seventv-webapp-svc
                port:
                  number: 80

  tls:
    - hosts:
        - 7tv.app
        - api.7tv.app
        - registry.7tv.app
      secretName: 7tv-internal-tls
